--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" href="css/style.css" />
 	<title>Link Spreader</title>
 </head>
 <body>
+	<div class="container">
+		<div class="row">
+			
+		</div>
+	</div>
 	
+	<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
