--- a/index.html
+++ b/index.html
@@ -9,10 +9,19 @@
 <body>
 	<div class="container">
 		<div class="row">
-			
+			<div class="col-lg-6">
+		    <div class="input-group">
+		      <input type="text" class="form-control" placeholder="Search for...">
+		      <span class="input-group-btn">
+		        <button class="btn btn-default" type="button">Go!</button>
+		      </span>
+		    </div><!-- /input-group -->
+		  </div><!-- /.col-lg-6 -->
 		</div>
 	</div>
 	
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js" async></script> 
 	<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
