--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<div class="container">
 		<h1 class="main-title">Link Spreader</h1>
 		<div class="row">
+
 			<div class="input-container">
 				<div class="col-lg-6">
 			    <div class="input-group">
@@ -19,9 +20,17 @@
 			      </span>
 			    </div><!-- /input-group -->
 			  </div><!-- /.col-lg-6 -->
-			</div>
-		</div>
-	</div>
+			</div><!-- .input-container -->
+
+		</div><!-- .row -->
+	</div><!-- .container -->
+
+	<footer>
+		<div class="dev-info">
+			Made by:
+			<a href="http://cjszczechowicz.com" id="website-link" target='_blank'>Chris Szczechowicz</a>
+		</div>	
+	</footer>
 	
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="js/bootstrap.min.js" async></script> 
